<resources>
    <string name="app_name">UnitCalculator</string>
    <string name="mass">Mass</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="area">Area</string>
    <string name="Area">Area</string>
    <string name="Mass">Mass</string>
    <string name="Volume">Volume</string>
    <string name="Time">Time</string>
    <string name="weight">TextView</string>
    <string name="Weight">Weight</string>
    <string name="convert">Convert</string>
    <string name="enter_weight">Enter weight</string>
    <string name="textview">TextView</string>
    <string name="textview8">TextView</string>
    <string name="convert_time">Convert</string>
    <string name="Enter_time">0</string>
    <string name="enter_unit">0</string>
    <string name="select_unit">select unit</string>
    <string name="result">0.0</string>
    <string name="textview13">TextView</string>
    <string name="textview15">TextView</string>
    <string name="textview12">TextView</string>
    <string name="Convert">convert</string>
</resources>