<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3CBCB"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imagebutton1"
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:backgroundTint="#D3CBCB"
        android:contentDescription="@string/Mass"
        android:onClick="openActivity2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        app:layout_marginBaseline="44dp"
        app:srcCompat="@drawable/bodyscale"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imagebutton2"
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:backgroundTint="#D3CBCB"
        android:contentDescription="@string/Time"
        android:onClick="openActivity3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagebutton1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        app:srcCompat="@drawable/backintime"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imagebutton3"
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#D3CBCB"
        android:contentDescription="@string/Volume"
        android:onClick="openActivity4"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sugar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="132dp"
        android:layout_height="23dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="43dp"
        android:gravity="center"
        android:text="@string/mass"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imagebutton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="23dp"
        android:gravity="center"
        android:text="@string/time"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imagebutton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="132dp"
        android:layout_height="23dp"
        android:layout_marginStart="48dp"
        android:gravity="center"
        android:text="@string/volume"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imagebutton4"
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:backgroundTint="#D3CBCB"
        android:contentDescription="@string/Area"
        android:onClick="openActivity5"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagebutton3"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton2"
        app:layout_constraintVertical_bias="0.164"
        app:srcCompat="@drawable/statistics"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="132dp"
        android:layout_height="23dp"
        android:gravity="center"
        android:text="@string/area"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="314dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="Welcome to the app this app is designed for unit conversion select any of the above button and share your feedback"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:backgroundTint="#D3CBCB"
        android:onClick="openActivity6"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton3"
        app:layout_constraintVertical_bias="0.408"
        app:srcCompat="@drawable/measure_tape" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="132dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="Length"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="132dp"
        android:layout_height="135dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#D3CBCB"
        android:onClick="openActivity7"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.017"
        app:srcCompat="@drawable/temperature" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="132dp"
        android:layout_height="23dp"
        android:gravity="center"
        android:text="Temperature"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>